...
    <string name="middle_name_special_chars_error">Please write your middle name in English</string>
    <string name="select">Select</string>
    <string name="error_driver_photo_upload_failed">Uploading driver photo failed, do you want to retry?</string>
    <string name="ride_app">Ride %s</string>
    <string name="update_documents">Update Documents</string>
    <string name="documents">Documents</string>
    <string name="need_help">Need Help? Contact us.</string>
    <string name="need_help_message_documents">Need help on documents</string>
    <string name="select_email_application_message">Select email application…</string>
    <string name="title_insurance">Insurance</string>

    <!-- driver sign up -->
    <string name="driver_photo_description">Take Driver User Photo</string>
...
    <string name="driver_continue">Continue</string>
    <string name="driver_vehicle_tell_us">Tell us about your vehicle</string>
    <string name="driver_vehicle_information_description">To qualify you must be 21 years of age and have a vehicle that meets the following requirements:</string>
    <string name="driver_vehicle_information_required_year">2001 or newer</string>
    <string name="driver_vehicle_information_required_doors">4 doors</string>
    <string name="driver_vehicle_information_required_not_salvage">Not salvaged</string>
    <string name="driver_clear_photo">Are you sure your Driver Profile Photo clearly shows your face and eyes without sunglasses?</string>

    <string name="title_driver_photo">Your Driver Photo</string>
    <string name="title_driver_license">Driver License</string>
    <string name="title_driver_tnc_sticker">Auto Inspection Sticker</string>
    <string name="title_driver_insurance">Insurance</string>
    <string name="title_terms_and_conditions">Terms and Conditions</string>
    <string name="title_driver_vehicle_information">Vehicle Information</string>
    <string name="title_driver_year">Year</string>
    <string name="title_driver_make">Make</string>
...
    <string name="licence_place">Licence place</string>
    <string name="driver_licence_expiration_date">Expiration Date:</string>
    <!-- driver -->
    <string name="register_driver">Register as a driver</string>
    <string name="register_driver_sucess">Thank you for your application! We will reach out to you soon regarding next steps.</string>
    <string name="skip">Skip</string>
    <string name="next">Next</string>

    <string name="rating_feedback_message_text">What feedback would you give %s</string>

    <string name="driver_info">Interested in\nbecoming a driver?</string>
    <string name="coming_soon">Coming soon, please be patient</string>
    <string name="license_confirm">Have you had your license for at least ONE year?</string>
    <string name="car_photo_confirm">Please take clear photo %1$s?</string>
    <string name="car_photo_front">Front right angle, showing the licence plate</string>
    <string name="car_photo_back">Back left angle showing plate</string>
    <string name="car_photo_inside">Inside photo showing the entire back seat</string>
    <string name="car_photo_trunk">Open trunk, full view</string>
    <string name="car_photo_dialog_required">Please upload car photo to continue.</string>
...
    <string name="city_tnc_fee_text">CITY TNC FEE</string>
    <string name="processing_fee_text">PROCESSING FEE</string>

    <string name="cant_process_image">We can\'t process your picture: %s</string>
    <string name="contact">Contact</string>

    <string name="text_contact_support">Contact Support</string>
    <string name="error_io_write_disk">Can\'t save file on disk. Please check if it\'s enough free disk space.</string>
    <string name="you_are_in_this_queue">You are in this queue</string>
    <string name="you_are_not_in_this_queue">You are not in this queue</string>

    <plurals name="stars">
        <item quantity="one">%d star</item>
...
    <string name="field_required">This field is required.</string>

    <!-- edit picture -->
    <string name="edit_picture">Edit Picture</string>
    <string name="take_photo">Take Photo</string>
    <string name="choose_photo">Choose From Library</string>
    <string name="cancel">Cancel</string>
    <string name="please_select_photo">Please select photo</string>
    <string name="enter_value">Enter value</string>
    <string name="ride_upgrade_msg">Do you confirm an upgrade from: %1$s to: %2$s class?</string>
    <string name="my_location">My Location</string>

    <!-- ride upgrade -->
...
