...
                android:layout_height="0dp"
                android:layout_weight="1">

                <LinearLayout style="@style/LinearLayout.Base">

                    <ImageView
                        android:id="@+id/photo"
                        style="@style/ImageView.DriverSignUp.Top"
                        android:src="@drawable/icn_license" />

                    <include layout="@layout/view_single_divider" />

                    <TextView
...

            </ScrollView>

            <include layout="@layout/view_single_divider"  />

            <Button
                android:id="@+id/openTakePhotoControl"
                style="@style/Button.RoundedBlueButton"
                android:layout_margin="@dimen/material_padding"
                android:drawableStart="@drawable/icn_photo_white"
                android:paddingEnd="@dimen/material_padding"
                android:paddingStart="@dimen/material_padding"
                android:text="@string/take_photo" />
...
